--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,9 @@
 language: cpp
-script: make
+
+before_install:
+	- sudo apt-get update -qq
+	- sudo apt-get install -qq clang gcc
+
+script:
+	- make CXX=clang++
+	- make CXX=g++
