--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: cpp
 
 before_install:
-- sudo apt-get update -qq
-- sudo apt-get install -qq clang gcc
+- sudo apt-get update
+- sudo apt-get install clang gcc
 
 script:
 - make CXX=clang++
