--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ compiler:
 - gcc
 
 before_install:
-- sudo apt-get update
-- sudo apt-get install clang gcc
+- test -n $CC  && unset CC
+- test -n $CXX && unset CXX
 
 script:
 - make
