--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,11 @@ compiler:
 - clang
 - gcc
 
-before_install:
-- test -n $CC  && unset CC
-- test -n $CXX && unset CXX
-
 script:
-- make
+- make CXX=clang++
+- make clean
+- make CXX=g++
+- make clean
 
 notifications:
  email:
